WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286213
Fuzzilli build is broken due to -Wunsafe-buffer-usage
https://bugs.webkit.org/show_bug.cgi?id=286213
Summary
Fuzzilli build is broken due to -Wunsafe-buffer-usage
David Kilzer (:ddkilzer)
Reported
2025-01-18 12:53:52 PST
Fuzzilli build is broken due to -Wunsafe-buffer-usage
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-18 12:54:22 PST
<
rdar://problem/143194698
>
David Kilzer (:ddkilzer)
Comment 2
2025-01-18 13:03:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39254
EWS
Comment 3
2025-01-18 13:05:23 PST
Committed
289121@main
(240f71c9eaac): <
https://commits.webkit.org/289121@main
> Reviewed commits have been landed. Closing PR #39254 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug