Fuzzilli build is broken due to -Wunsafe-buffer-usage <https://bugs.webkit.org/show_bug.cgi?id=286213> <rdar://143194698>

Unreviewed build fix.

* Source/JavaScriptCore/fuzzilli/Fuzzilli.cpp:
(Fuzzilli::resetCoverageEdges):
(__sanitizer_cov_trace_pc_guard):
- Skip -Wunsafe-buffer-usage warnings in Fuzzilli.

Canonical link: https://commits.webkit.org/289121@main